Explain the monster page

--- a/monsters.html
+++ b/monsters.html
@@ -32,6 +32,13 @@
         </header>
         {% include toc.html %}
         <main class="container">
+            <p>
+                Page numbers are a reference to
+                <a href="https://osricrpg.com/files/osric_core_rules.pdf"
+                    >Osric</a
+                >.
+            </p>
+            <p>The search bar on this page searches for monster names.</p>
             <table id="monsters">
                 <thead>
                     <tr>
